name:                htcondor
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Nathan Howell <nhowell@alphaheavy.com>
maintainer:          Nathan Howell <nhowell@alphaheavy.com>
homepage:            http://github.com/alphaHeavy/htcondor
bug-reports:         http://github.com/alphaHeavy/htcondor/issues
category:            Network

build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Network.HTCondor.Submit
    Network.HTCondor.Submit.Language
    Network.HTCondor.Submit.LogParser
    Network.HTCondor.Submit.Types
  build-depends:
    base              >= 3      && < 5,
    bytestring        >= 0.9.1,
    conduit           >= 0.4,
    containers        >= 0.4,
    directory         >= 1.2,
    mtl               >= 2.0,
    resourcet         >= 0.3,
    parsec            >= 3.0,
    process           >= 1.1,
    text              >= 0.10,
    transformers      >= 0.2
  ghc-options:
    -Wall

source-repository head
  type:     git
  location: https://github.com/alphaHeavy/htcondor.git
